--- a/Assets/UI/MainMenu/Styles.uss
+++ b/Assets/UI/MainMenu/Styles.uss
@@ -107,6 +107,10 @@
     width: 80px;
     height: 80px;
     padding: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .checkbox > Label {
