--- a/Assets/UI/MainMenu/background.uxml
+++ b/Assets/UI/MainMenu/background.uxml
@@ -1,7 +1,8 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="True">
     <ui:Template name="flicker-decoration-flipped" src="project://database/Assets/UI/MainMenu/flicker-decoration-flipped.uxml?fileID=9197481963319205126&amp;guid=d39991b8a9651b143bc0a93d764a32e4&amp;type=3#flicker-decoration-flipped" />
     <ui:Template name="flicker-decoration" src="project://database/Assets/UI/MainMenu/flicker-decoration.uxml?fileID=9197481963319205126&amp;guid=ec90f2ce8811dc445bcb19bcc8127408&amp;type=3#flicker-decoration" />
-    <ui:VisualElement name="background" class="background" style="background-image: none;">
+    <Style src="project://database/Assets/UI/MainMenu/Styles.uss?fileID=7433441132597879392&amp;guid=dfb32b1fdf2bfae48bbadfa74165273b&amp;type=3#Styles" />
+    <ui:VisualElement name="background" class="background">
         <ui:VisualElement name="flicker-elements" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); position: absolute; opacity: 0.6;">
             <ui:Instance template="flicker-decoration-flipped" name="flicker-decoration-flipped" style="position: absolute; top: 573px; left: 404px;" />
             <ui:Instance template="flicker-decoration-flipped" name="flicker-decoration-flipped" style="position: absolute; top: 1034px; left: 675px;" />
@@ -10,7 +11,7 @@
             <ui:Instance template="flicker-decoration" name="flicker-decoration" style="position: absolute; top: 385px; left: 509px;" />
             <ui:Instance template="flicker-decoration" name="flicker-decoration" style="position: absolute; top: 603px; left: 1608px;" />
         </ui:VisualElement>
-        <ui:VisualElement name="decoration" class="decoration-asset" style="opacity: 0.6;" />
-        <ui:VisualElement name="decoration" class="decoration-asset" style="scale: -0.5 -0.5; left: auto; right: -170px; top: auto; transform-origin: bottom; rotate: 0; bottom: 360px; opacity: 0.6;" />
+        <ui:VisualElement name="decoration" class="decoration-asset flicker" />
+        <ui:VisualElement name="decoration" class="decoration-asset flicker" style="scale: -0.5 -0.5; left: auto; right: -170px; top: auto; transform-origin: bottom; rotate: 0; bottom: 360px;" />
     </ui:VisualElement>
 </ui:UXML>
