--- a/Assets/UI/MainMenu/flicker-decoration.uxml
+++ b/Assets/UI/MainMenu/flicker-decoration.uxml
@@ -1,8 +1,4 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="True">
-    <ui:VisualElement name="container" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row; transform-origin: left top; scale: 0.5 0.5;">
-        <ui:VisualElement style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 16px; background-image: url(&apos;project://database/Assets/Art/Textures/UI/AtlasUI.psd?fileID=7545798831788784584&amp;guid=31e77ef23200a8842b3829370f52c886&amp;type=3#decoration-8&apos;);" />
-        <ui:VisualElement style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 16px; background-image: url(&apos;project://database/Assets/Art/Textures/UI/AtlasUI.psd?fileID=7545798831788784584&amp;guid=31e77ef23200a8842b3829370f52c886&amp;type=3#decoration-8&apos;);" />
-        <ui:VisualElement style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 16px; background-image: url(&apos;project://database/Assets/Art/Textures/UI/AtlasUI.psd?fileID=7545798831788784584&amp;guid=31e77ef23200a8842b3829370f52c886&amp;type=3#decoration-8&apos;);" />
-        <ui:VisualElement style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 16px; background-image: url(&apos;project://database/Assets/Art/Textures/UI/AtlasUI.psd?fileID=7545798831788784584&amp;guid=31e77ef23200a8842b3829370f52c886&amp;type=3#decoration-8&apos;);" />
-    </ui:VisualElement>
+    <Style src="project://database/Assets/UI/MainMenu/Styles.uss?fileID=7433441132597879392&amp;guid=dfb32b1fdf2bfae48bbadfa74165273b&amp;type=3#Styles" />
+    <ui:VisualElement name="decoration-lines" class="flicker" style="background-color: rgba(0, 0, 0, 0); transform-origin: left top; background-image: url(&apos;project://database/Assets/Art/Textures/UI/AtlasUI.psd?fileID=-3112736373974141601&amp;guid=31e77ef23200a8842b3829370f52c886&amp;type=3#decoration-line&apos;); height: 10px; width: 100px; -unity-background-scale-mode: scale-to-fit;" />
 </ui:UXML>
