--- a/Assets/UI/Settings/GameSettings.uxml
+++ b/Assets/UI/Settings/GameSettings.uxml
@@ -65,6 +65,9 @@
                                 <AttributeOverrides element-name="Label" text="Visual FX" />
                             </ui:Instance>
                             <ui:Instance template="Label" style="display: flex;">
+                                <AttributeOverrides element-name="Label" text="Music" />
+                            </ui:Instance>
+                            <ui:Instance template="Label" style="display: flex;">
                                 <AttributeOverrides element-name="Label" text="Vivox Speaker" />
                             </ui:Instance>
                             <ui:Instance template="Label" style="display: flex;">
@@ -74,6 +77,7 @@
                         <ui:VisualElement name="sliders" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); height: 100%; justify-content: center;">
                             <ui:Slider picking-mode="Ignore" label="Volume" value="1" high-value="1" name="volume" low-value="0.001" class="slider" />
                             <ui:Slider picking-mode="Ignore" label="SoundFX" value="1" high-value="1" name="sound-fx" low-value="0.001" class="slider" />
+                            <ui:Slider picking-mode="Ignore" label="Music" value="1" high-value="1" name="music" low-value="0.001" class="slider" />
                             <ui:Slider picking-mode="Ignore" label="Vivox Speaker" value="0" high-value="0" name="vivox-volume" low-value="-50" class="slider" />
                             <ui:Slider picking-mode="Ignore" label="Vivox Microphone" value="0" high-value="0" name="vivox-microphone-volume" low-value="-50" class="slider" />
                         </ui:VisualElement>
