--- a/Assets/UI/MainMenu/MainMenu.uxml
+++ b/Assets/UI/MainMenu/MainMenu.uxml
@@ -2,11 +2,11 @@
     <ui:Template name="background" src="project://database/Assets/UI/MainMenu/background.uxml?fileID=9197481963319205126&amp;guid=ee745de6c90100b468b8fa83a7cc0ea7&amp;type=3#background" />
     <Style src="project://database/Assets/UI/MainMenu/Styles.uss?fileID=7433441132597879392&amp;guid=dfb32b1fdf2bfae48bbadfa74165273b&amp;type=3#Styles" />
     <Style src="project://database/Assets/UI/Custom/radial-progress/radial-progress.uss?fileID=7433441132597879392&amp;guid=e8303b202c1f8b449928c170556b69f8&amp;type=3#radial-progress" />
-    <ui:VisualElement name="main-menu-container" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); align-items: center; justify-content: center;">
-        <ui:Instance template="background" name="background" picking-mode="Ignore" class="background" style="-unity-background-scale-mode: scale-and-crop; width: 101%; height: 101%; position: absolute;" />
+    <ui:VisualElement name="main-menu-container" style="align-items: center; justify-content: center; width: 100%; height: 100%;">
+        <ui:Instance template="background" name="background" picking-mode="Ignore" class="background" style="-unity-background-scale-mode: scale-and-crop; position: absolute;" />
         <ui:VisualElement name="gradient" picking-mode="Ignore" style="position: absolute; background-image: url(&apos;project://database/Assets/Art/Textures/UI/AtlasUI.psd?fileID=-6167541733945284890&amp;guid=31e77ef23200a8842b3829370f52c886&amp;type=3#RadialGradient&apos;); height: 100%; width: 100%; opacity: 0.7; display: flex; -unity-background-scale-mode: scale-to-fit;" />
-        <ui:VisualElement style="background-color: rgba(0, 0, 0, 0); width: 100%; height: 100%; align-items: center; justify-content: space-around;">
-            <ui:VisualElement name="logo" picking-mode="Ignore" tabindex="-1" style="background-color: rgba(0, 0, 0, 0); background-image: url(&apos;project://database/Assets/Art/Textures/UI/AtlasUI.psd?fileID=4956762818165564686&amp;guid=31e77ef23200a8842b3829370f52c886&amp;type=3#logo&apos;); width: 800px; align-self: center; height: 250px; -unity-background-scale-mode: scale-to-fit;" />
+        <ui:VisualElement style="background-color: rgba(0, 0, 0, 0); width: 100%; height: 100%; align-items: center; justify-content: center;">
+            <ui:VisualElement name="logo" picking-mode="Ignore" tabindex="-1" style="background-color: rgba(0, 0, 0, 0); background-image: url(&apos;project://database/Assets/Art/Textures/UI/AtlasUI.psd?fileID=4956762818165564686&amp;guid=31e77ef23200a8842b3829370f52c886&amp;type=3#logo&apos;); width: 600px; align-self: center; margin-bottom: 50px; height: 90px;" />
             <ui:GroupBox name="base-menu-options" tabindex="-1" style="position: relative; width: 400px; display: flex;">
                 <ui:Button tabindex="0" text="Single player" name="single-player-button" focusable="true" class="button" style="visibility: visible; display: flex; opacity: 1;" />
                 <ui:Button tabindex="1" text="Multiplayer" name="multiplayer-button" focusable="true" class="button" style="visibility: visible; display: flex; opacity: 1;" />
@@ -31,7 +31,7 @@
                 <ui:Button tabindex="1" text="Free Flight" display-tooltip-when-elided="true" name="free-flight-button" focusable="true" class="button" style="visibility: visible; display: flex; opacity: 1;" />
                 <ui:Button tabindex="2" text="Return" display-tooltip-when-elided="true" name="single-player-return-button" class="button" />
             </ui:GroupBox>
-            <ui:VisualElement name="unity-logo" picking-mode="Ignore" tabindex="-1" style="background-color: rgba(0, 0, 0, 0); background-image: url(&apos;project://database/Assets/Art/Textures/UI/AtlasUI.psd?fileID=2189907575338286644&amp;guid=31e77ef23200a8842b3829370f52c886&amp;type=3#MadeWithUnity&apos;); width: 180px; height: 50px; position: relative; -unity-background-scale-mode: scale-to-fit;" />
+            <ui:VisualElement name="unity-logo" picking-mode="Ignore" tabindex="-1" style="background-color: rgba(0, 0, 0, 0); background-image: url(&apos;project://database/Assets/Art/Textures/UI/AtlasUI.psd?fileID=2189907575338286644&amp;guid=31e77ef23200a8842b3829370f52c886&amp;type=3#MadeWithUnity&apos;); width: 180px; height: 50px; position: absolute; -unity-background-scale-mode: scale-to-fit; bottom: 20px;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
